--- a/package.json
+++ b/package.json
@@ -8,34 +8,35 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "1.16.1",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.5",
     "@react-navigation/native-stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.6.2",
     "convert-units": "^3.0.0-beta.2",
-    "expo": "~42.0.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
+    "expo": "^43.0.0",
+    "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
     "nanoid": "^3.1.30",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-draggable-flatlist": "^3.0.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "0.14.10",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-unimodules": "~0.15.0",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
