--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "test": "echo 'Running noop test'
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
