[RA-7] Set up testflight deployments (#8)
* Change app name to chefnote
* Update build information in the pipeline
* Update github actions files (Reduce the number of automated builds and allow for manual creation of production builds)
* Add a simulation build channel for simulator builds
* Update README with pipeline information

--- a/.github/workflows/productionbuild.yml
+++ b/.github/workflows/productionbuild.yml
@@ -3,12 +3,10 @@
 
 name: EAS Build
 
-on:
-  push:
-    branches: [ main ]
-
+on: workflow_dispatch
+    
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
 
     strategy:
@@ -25,7 +23,7 @@ jobs:
         cache: 'npm'
     - run: npm install 
     - run: npm test
-  build:
+  deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -36,8 +34,8 @@ jobs:
           expo-token: ${{ secrets.EXPO_TOKEN }}
           expo-cache: true
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build on EAS
-        run: npx eas-cli build --platform ios --profile=development
+        run: npx eas-cli build --platform ios --profile=production
 
     
