--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
           expo-token: ${{ secrets.EXPO_TOKEN }}
           expo-cache: true
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build on EAS
         run: npx eas-cli build --platform ios --profile=development
 
