--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,12 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: Setup Expo
         uses: expo/expo-github-action@v5
         with:
@@ -36,7 +42,7 @@ jobs:
           expo-token: ${{ secrets.EXPO_TOKEN }}
           expo-cache: true
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Build on EAS
         run: npx eas-cli build --platform ios --profile=development
 
