[RA-7] Configure automated deployments (#9)
* Change app name to chefnote
* Update build information in the pipeline
* Update github actions files - Reduce the number of automated builds and allow for 
manual creation of production builds
* Add a simulation build channel for simulator builds
* Update README with pipeline information
* Update bundle identifier to deploy app

--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "chefnote",
-    "slug": "chefnote",
+    "name": "chefnotes",
+    "slug": "chefnotes",
     "version": "1.0.0",
     "assetBundlePatterns": ["**/*"],
     "android": {
-      "package": "com.chefnoteco.chefnote"
+      "package": "com.chefnotesco.chefnotes"
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.chefnoteco.chefnote",
+      "bundleIdentifier": "com.chefnotesco.chefnotes",
       "buildNumber": "0.1.0"
     }
   }
