--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "expo start --dev-client",
-    "test": "echo 'Running noop tests'"
+    "test": "echo 'Running noop tests'",
+    "e2e": "detox test --configuration ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
