[RA-40] Fix selecting multiple ingredients (#10)
* Ignore ios and android folders - Including these causes expo to think it's a bare-metal project and removes 
a lot of the workflow support so we ignore them to fix that issue
* Fix issue with selecting ingredients from new recipe form
* Remove an unnecessary test
* Fix issue with adding and removing instructions
* Change the app name for builds
* Fetch ingredients on recipe form load

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "chefnotes",
-    "slug": "chefnotes",
+    "name": "ChefNotes",
+    "slug": "ChefNotes",
     "version": "1.0.0",
     "assetBundlePatterns": ["**/*"],
     "android": {
