Revert "Add deploy and publish scripts"
This reverts commit 5172965412fb5c1df86568d37f4a1b2e46e270f2.

--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,6 @@
   "build": {
     "development": {
       "distribution": "internal",
-      "releaseChannel": "development",
       "env": {
         "APP_ENV": "development"
       },
@@ -16,21 +15,16 @@
         "buildConfiguration": "Debug"
       }
     },
+    "preview": {
+      "distribution": "internal"
+    },
     "simulator": {
       "distribution": "internal",
-      "releaseChannel": "dev",
       "ios": {
         "simulator": true
       }
     },
-    "staging": {
-      "releaseChannel": "beta",
-      "env": {
-        "APP_ENV": "staging"
-      }
-    },
     "production": {
-      "releaseChannel": "prod",
       "env": {
         "APP_ENV": "production"
       }
