Add deploy and publish scripts

--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,7 @@
   "build": {
     "development": {
       "distribution": "internal",
+      "releaseChannel": "development",
       "env": {
         "APP_ENV": "development"
       },
@@ -15,16 +16,21 @@
         "buildConfiguration": "Debug"
       }
     },
-    "preview": {
-      "distribution": "internal"
-    },
     "simulator": {
       "distribution": "internal",
+      "releaseChannel": "dev",
       "ios": {
         "simulator": true
       }
     },
+    "staging": {
+      "releaseChannel": "beta",
+      "env": {
+        "APP_ENV": "staging"
+      }
+    },
     "production": {
+      "releaseChannel": "prod",
       "env": {
         "APP_ENV": "production"
       }
