--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "expo start --dev-client",
-    "test": "echo 'Running noop tests'"
+    "test": "echo 'Running noop tests'",
+    "deploy_app:simulator": "eas build --platform simulator",
+    "deploy_app:dev": "eas build --platform development",
+    "deploy_app:staging": "eas build --platform staging",
+    "deploy_app:prod": "eas build --platform production",
+    "publish:dev": "expo publish --release-channel development",
+    "publish:beta": "expo publish --release-channel beta",
+    "publish:prod": "expo publish --release-channel production"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
@@ -16,7 +23,6 @@
     "@react-navigation/native-stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.6.2",
     "convert-units": "^3.0.0-beta.2",
-    "expo": "^43.0.0",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.13",
@@ -38,7 +44,8 @@
     "redux": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "expo": "^43.0.3"
   },
   "private": true,
   "version": "1.0.0"
