--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.13",
+    "formik": "^2.2.9",
     "lodash.clonedeep": "^4.5.0",
     "nanoid": "^3.1.30",
     "react": "17.0.1",
